--- a/new script.ipynb
+++ b/new script.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
        "[1935 rows x 14 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,25 +833,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('gen-feb-21.csv',index=False, header=True)"
+    "df.to_csv('gen-feb-21.csv',index=True, header=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_csv('gen-feb-21.csv')"
+    "df_saved=pd.read_csv('gen-feb-21.csv',index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -860,18 +860,325 @@
        "(1935, 14)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.shape"
+    "df_saved.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CL=F</th>\n",
+       "      <th>DX-Y.NYB</th>\n",
+       "      <th>ES=F</th>\n",
+       "      <th>EURCHF=X</th>\n",
+       "      <th>EURUSD=X</th>\n",
+       "      <th>GBPCHF=X</th>\n",
+       "      <th>GC=F</th>\n",
+       "      <th>JPYCHF=X</th>\n",
+       "      <th>SI=F</th>\n",
+       "      <th>USDCHF=X</th>\n",
+       "      <th>YM=F</th>\n",
+       "      <th>^SSMI</th>\n",
+       "      <th>^TNX</th>\n",
+       "      <th>^VIX</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Datetime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-01-03 22:00:00+00:00</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>89.931000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-01-03 23:00:00+00:00</th>\n",
+       "      <td>48.490002</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3751.25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1915.900024</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>26.955000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>30506.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-01-03 23:30:00+00:00</th>\n",
+       "      <td>48.430000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3749.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1917.400024</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>27.014999</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>30505.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-01-04 00:00:00+00:00</th>\n",
+       "      <td>48.430000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3746.50</td>\n",
+       "      <td>1.08209</td>\n",
+       "      <td>1.225340</td>\n",
+       "      <td>1.20761</td>\n",
+       "      <td>1915.800049</td>\n",
+       "      <td>0.008570</td>\n",
+       "      <td>26.945000</td>\n",
+       "      <td>0.88369</td>\n",
+       "      <td>30474.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-01-04 00:30:00+00:00</th>\n",
+       "      <td>48.389999</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3740.75</td>\n",
+       "      <td>1.08169</td>\n",
+       "      <td>1.224440</td>\n",
+       "      <td>1.20780</td>\n",
+       "      <td>1917.900024</td>\n",
+       "      <td>0.008574</td>\n",
+       "      <td>27.000000</td>\n",
+       "      <td>0.88360</td>\n",
+       "      <td>30431.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-26 21:00:00+00:00</th>\n",
+       "      <td>61.709999</td>\n",
+       "      <td>90.918999</td>\n",
+       "      <td>3802.25</td>\n",
+       "      <td>1.09708</td>\n",
+       "      <td>1.207292</td>\n",
+       "      <td>1.26680</td>\n",
+       "      <td>1731.000000</td>\n",
+       "      <td>0.008529</td>\n",
+       "      <td>26.620001</td>\n",
+       "      <td>0.90890</td>\n",
+       "      <td>30866.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>27.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-26 21:30:00+00:00</th>\n",
+       "      <td>61.660000</td>\n",
+       "      <td>90.930000</td>\n",
+       "      <td>3807.75</td>\n",
+       "      <td>1.09678</td>\n",
+       "      <td>1.207729</td>\n",
+       "      <td>1.26407</td>\n",
+       "      <td>1733.000000</td>\n",
+       "      <td>0.008522</td>\n",
+       "      <td>26.700001</td>\n",
+       "      <td>0.90833</td>\n",
+       "      <td>30915.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-26 22:00:00+00:00</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>90.929001</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.09638</td>\n",
+       "      <td>1.208751</td>\n",
+       "      <td>1.26547</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.008520</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.90820</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-26 22:30:00+00:00</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.09653</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.008522</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.90850</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-26 23:00:00+00:00</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.09653</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.008522</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1935 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                CL=F   DX-Y.NYB     ES=F  EURCHF=X  EURUSD=X  \\\n",
+       "Datetime                                                                       \n",
+       "2021-01-03 22:00:00+00:00        NaN  89.931000      NaN       NaN       NaN   \n",
+       "2021-01-03 23:00:00+00:00  48.490002        NaN  3751.25       NaN       NaN   \n",
+       "2021-01-03 23:30:00+00:00  48.430000        NaN  3749.00       NaN       NaN   \n",
+       "2021-01-04 00:00:00+00:00  48.430000        NaN  3746.50   1.08209  1.225340   \n",
+       "2021-01-04 00:30:00+00:00  48.389999        NaN  3740.75   1.08169  1.224440   \n",
+       "...                              ...        ...      ...       ...       ...   \n",
+       "2021-02-26 21:00:00+00:00  61.709999  90.918999  3802.25   1.09708  1.207292   \n",
+       "2021-02-26 21:30:00+00:00  61.660000  90.930000  3807.75   1.09678  1.207729   \n",
+       "2021-02-26 22:00:00+00:00        NaN  90.929001      NaN   1.09638  1.208751   \n",
+       "2021-02-26 22:30:00+00:00        NaN        NaN      NaN   1.09653       NaN   \n",
+       "2021-02-26 23:00:00+00:00        NaN        NaN      NaN   1.09653       NaN   \n",
+       "\n",
+       "                           GBPCHF=X         GC=F  JPYCHF=X       SI=F  \\\n",
+       "Datetime                                                                \n",
+       "2021-01-03 22:00:00+00:00       NaN          NaN       NaN        NaN   \n",
+       "2021-01-03 23:00:00+00:00       NaN  1915.900024       NaN  26.955000   \n",
+       "2021-01-03 23:30:00+00:00       NaN  1917.400024       NaN  27.014999   \n",
+       "2021-01-04 00:00:00+00:00   1.20761  1915.800049  0.008570  26.945000   \n",
+       "2021-01-04 00:30:00+00:00   1.20780  1917.900024  0.008574  27.000000   \n",
+       "...                             ...          ...       ...        ...   \n",
+       "2021-02-26 21:00:00+00:00   1.26680  1731.000000  0.008529  26.620001   \n",
+       "2021-02-26 21:30:00+00:00   1.26407  1733.000000  0.008522  26.700001   \n",
+       "2021-02-26 22:00:00+00:00   1.26547          NaN  0.008520        NaN   \n",
+       "2021-02-26 22:30:00+00:00       NaN          NaN  0.008522        NaN   \n",
+       "2021-02-26 23:00:00+00:00       NaN          NaN  0.008522        NaN   \n",
+       "\n",
+       "                           USDCHF=X     YM=F  ^SSMI  ^TNX   ^VIX  \n",
+       "Datetime                                                          \n",
+       "2021-01-03 22:00:00+00:00       NaN      NaN    NaN   NaN    NaN  \n",
+       "2021-01-03 23:00:00+00:00       NaN  30506.0    NaN   NaN    NaN  \n",
+       "2021-01-03 23:30:00+00:00       NaN  30505.0    NaN   NaN    NaN  \n",
+       "2021-01-04 00:00:00+00:00   0.88369  30474.0    NaN   NaN    NaN  \n",
+       "2021-01-04 00:30:00+00:00   0.88360  30431.0    NaN   NaN    NaN  \n",
+       "...                             ...      ...    ...   ...    ...  \n",
+       "2021-02-26 21:00:00+00:00   0.90890  30866.0    NaN   NaN  27.95  \n",
+       "2021-02-26 21:30:00+00:00   0.90833  30915.0    NaN   NaN    NaN  \n",
+       "2021-02-26 22:00:00+00:00   0.90820      NaN    NaN   NaN    NaN  \n",
+       "2021-02-26 22:30:00+00:00   0.90850      NaN    NaN   NaN    NaN  \n",
+       "2021-02-26 23:00:00+00:00       NaN      NaN    NaN   NaN    NaN  \n",
+       "\n",
+       "[1935 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_saved"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
